fix sponsors spacing

--- a/djangocon_2022/static/sass/_homepage.scss
+++ b/djangocon_2022/static/sass/_homepage.scss
@@ -175,7 +175,7 @@
   }
 
   .title {
-    padding-bottom: 4.25rem;
+    padding-bottom: 2rem;
     color: base.$TxtBlue;
 
     strong {
@@ -197,8 +197,7 @@
       text-align: start;
       border-top: 0.125rem solid base.$BgDarkBlue;
       max-width: 12rem;
-      margin-top: 4.25rem;
-      padding-bottom: 4.25rem;
+      margin-top: 2rem;
       padding-top: .75rem;
     }
     p {
